--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -30,6 +30,9 @@ Please correct the problems below and resubmit. </span>
     <br/>
     <h3>Here's how I'll pay...</h3>
     <label for="ccNumber">Credit Card #: </label> <input type="text" th:field="*{ccNumber}"/> <br/> <label for="ccExpiration">Expiration: </label>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">CC Num Error</span>
     <input type="text" th:field="*{ccExpiration}"/> <br/> <label for="ccCVV">CVV: </label>
     <input type="text" th:field="*{ccCVV}"/>
     <br/>
